# ros2_learning_A2

./: CLAUDE.md  README.md
.claude/: settings.local.json
agibot_a2_aimdk-dev2.0/protocol/protobuf/: MANIFEST.in  pyproject.toml  setup.py
agibot_a2_aimdk-dev2.0/protocol/protobuf/aimdk/protocol/action/: arm.proto  navigation.proto  plc.proto
agibot_a2_aimdk-dev2.0/protocol/protobuf/aimdk/protocol/agent/: agent_data.proto  agent_debug.proto  agent_service.proto  asr_result.proto
agibot_a2_aimdk-dev2.0/protocol/protobuf/aimdk/protocol/aim_master/: am_channel.proto
agibot_a2_aimdk-dev2.0/protocol/protobuf/aimdk/protocol/calibration/: calibration_api.proto  calibration_service.proto
agibot_a2_aimdk-dev2.0/protocol/protobuf/aimdk/protocol/common/: box.proto  control_source.proto  header.proto  image.proto  io_packet.proto  joint.proto  mocapjointstate.proto  odometry.proto  pixel_pose.proto  qr_pose.proto  quaternion.proto  rpy.proto  scalar_trajectory.proto  se2_acceleration.proto  se2_pose.proto  se2_velocity.proto  se3_acceleration.proto  se3_pose.proto  se3_trajectory.proto  se3_velocity.proto  twist.proto  vec2.proto  vec3.proto  wrench.proto
agibot_a2_aimdk-dev2.0/protocol/protobuf/aimdk/protocol/demo/: ball.proto  demo_channel.proto  demo_service.proto
agibot_a2_aimdk-dev2.0/protocol/protobuf/aimdk/protocol/digital/: task.proto
agibot_a2_aimdk-dev2.0/protocol/protobuf/aimdk/protocol/em/: api.proto
agibot_a2_aimdk-dev2.0/protocol/protobuf/aimdk/protocol/gateway/: robot_heartbeat.proto  robot_heartbeat_channel.proto
agibot_a2_aimdk-dev2.0/protocol/protobuf/aimdk/protocol/guardian/: guardian_channel.proto  guardian_service.proto
agibot_a2_aimdk-dev2.0/protocol/ros2/ros2_plugin_proto/: CMakeLists.txt  build.sh
docs/: 00b_robot_model.md  (+8 more)
(+470 files in other folders)
